# adaptive-sonic-pi-optimizer

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GHWORKFLOW_python-package.yml  README.md  example_mnist_piadam.py  example_rosenbrock_piadam.py  medium_article.md  pi_opt___init__.py  pi_opt_optim_pi_adam.py  pi_opt_optim_pi_sgd.py  pi_opt_schedules.py  pyproject.toml  test_test_schedules.py
