
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-recursive-optimizer"
version = "0.2.0"
description = "Pi-recursive schedules and optimizers for ML (PyTorch-first)."
authors = [{name="Open Source Contributors"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch>=2.0,<3"]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
